--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,7 +4,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: #f5e9e9;
-    margin-top: 10px;
 
 }
 
@@ -12,6 +11,12 @@ body {
 .main-container {
     flex-grow: 1;
     flex-wrap: wrap;
+    box-sizing: border-box;
+    padding: 2rem;
+}
+
+*, *:before, *:after {/*para consultar como se usa correctamente*/
+    box-sizing: inherit;
 }
 /*structural styles end*/
 
