--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #f5e9e9;
+    position: relative;
 
 }
 
@@ -27,7 +28,7 @@ left sidebar begin
     width: 16.875rem;
     border-radius: 20px;
     border: outset 1px black;
-    margin-right: 10px;   
+    margin-left: 1rem;   
     box-shadow: 5px 5px 5px #3f3f3f;
  
 }
@@ -62,8 +63,9 @@ weather card begin
     border-radius: 20px;
     color: #ffffff;
     background-color: #147ffa;
+   opacity: .7;
     padding: .5rem;
-    margin-block-end: 1rem;
+    margin: .5rem;
     box-shadow: 5px 5px 5px #3f3f3f;
 }
 
@@ -92,6 +94,8 @@ weather card begin
     width: 6rem;
     display: flex;
     flex-direction: column-reverse;
+    margin-block-end: 1rem;
+    align-items: flex-start;
 }
 
 .weather-section {
@@ -102,4 +106,20 @@ weather card begin
 
 /*
 weather card end
+*/
+
+/*
+footer start
+*/
+.footer-endPage {
+    background-color: black;
+    opacity: .7;
+    color: aliceblue;
+
+  
+}
+
+
+/*
+footer end
 */
