--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,6 +36,10 @@ body {
     
 }
 
+
+
+
+
 *, *:before, *:after {/*para consultar como se usa correctamente*/
     box-sizing: inherit;
 }
@@ -87,6 +91,8 @@ weather card begin
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.07);
 }
 
+
+
 .weather-card__country {
     margin: 0;
 }
@@ -120,6 +126,24 @@ weather card begin
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
+}
+
+@media (min-width: 480px) and (max-width: 768px){
+    .weather-section {
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+
+@media (min-width:769px) and (max-width:1024px){
+    .weather-section {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (min-width:1025px) and (max-width:1200px){
+    .weather-section {
+        grid-template-columns: repeat(3,1fr);
+    }
 }
 
 /*
