--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,6 +28,17 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+@media (min-width: 200px) and (max-width: 599px){
+    body {
+        grid-template-areas: 
+        "aside"
+        "main "
+        "footer";
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+      
+    }
+}
+
 /*structural styles begin*/
 .main-container {
     grid-area: main;
@@ -35,10 +46,6 @@ body {
     padding: 2rem 4rem;
     
 }
-
-
-
-
 
 *, *:before, *:after {/*para consultar como se usa correctamente*/
     box-sizing: inherit;
@@ -55,10 +62,10 @@ left sidebar begin
     padding: 1rem;
 }
 
+
+
 .left-sidebar__logo img {
     width: 100%;
-    
-
 }
 
 .left-sidebar__menu {
@@ -90,8 +97,6 @@ weather card begin
     margin: .5rem;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.07);
 }
-
-
 
 .weather-card__country {
     margin: 0;
@@ -128,9 +133,17 @@ weather card begin
     gap: 20px;
 }
 
-@media (min-width: 480px) and (max-width: 768px){
+@media (min-width: 300px) and (max-width: 599px){
     .weather-section {
         grid-template-columns: repeat(1,1fr);
+        gap: 10px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 768px){
+    .weather-section {
+        grid-template-columns: repeat(1,1fr);
+        gap: 10px;
     }
 }
 
@@ -157,9 +170,11 @@ footer start
 .footer-endPage {
 
     grid-area: footer;
+    width: 400px;
     background-color: black;
     opacity: .8;
     color: aliceblue;
+    
 }
 
 .footer-endPage__contenedor {
