--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -170,7 +170,7 @@ footer start
 .footer-endPage {
 
     grid-area: footer;
-    width: 400px;
+    width: 100%;
     background-color: black;
     opacity: .8;
     color: aliceblue;
