--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto+Condensed:wght@300;400&display=swap');
-
-/*color variables*/
-:root {
-    --main-bg-color: #D3C9FA;
-  }
+@import "variables.scss";
   
 
 /* font-family: 'Open Sans', sans-serif;
@@ -92,7 +88,7 @@ weather card begin
     justify-content: space-between;
     border-radius: 5px;
     color: #000000;
-    background-color: var(--main-bg-color);
+    background-color: $main-bg-color;
     padding: 1rem;
     margin: .5rem;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.07);
