--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,186 +1,16 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto+Condensed:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto+Condensed:wght@300;400&display=swap");
 @import "variables.scss";
-  
 
-/* font-family: 'Open Sans', sans-serif;
-font-family: 'Roboto Condensed', sans-serif;*/
-h1,h2,h3,
-h4,h5,h6 {
-    font-family: 'Roboto Condensed', sans-serif;
-}
+/*layout  styles*/
+@import "./layout/general.scss";
 
+@import "./layout/body.scss";
 
-body {
-    display: grid;
-    grid-template-areas: 
-            "aside main main"
-            "aside main main"
-            "footer footer footer";
-    grid-template-columns: 16.875rem 1fr 1fr;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
-}
+@import "./layout/aside.scss";
 
-@media (min-width: 200px) and (max-width: 599px){
-    body {
-        grid-template-areas: 
-        "aside"
-        "main "
-        "footer";
-        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
-      
-    }
-}
+@import "./layout/footer.scss";
 
-/*structural styles begin*/
-.main-container {
-    grid-area: main;
-    box-sizing: border-box;
-    padding: 2rem 4rem;
-    
-}
-
-*, *:before, *:after {/*para consultar como se usa correctamente*/
-    box-sizing: inherit;
-}
-/*structural styles end*/
-
-/*
-left sidebar begin
-*/
-.left-sidebar{
-    grid-area: aside ;
-    width: 16.875rem;
-    border-right: 1px solid #E8EDF0;
-    padding: 1rem;
-}
+/*components styles*/
+@import "./components/weather-card.scss";
 
 
-
-.left-sidebar__logo img {
-    width: 100%;
-}
-
-.left-sidebar__menu {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-}
-
-.left-sidebar__nav-item {
-    color: #3f3f3f;
-    padding: 1rem;
-    margin: 0.5rem 0;
-}
-
-/*
-left sidebar end
-*/
-
-/*
-weather card begin
-*/
-.weather-card {
-    display: flex;
-    justify-content: space-between;
-    border-radius: 5px;
-    color: #000000;
-    background-color: $main-bg-color;
-    padding: 1rem;
-    margin: .5rem;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.07);
-}
-
-.weather-card__country {
-    margin: 0;
-}
-
-.weather-card__city {
-    margin: 0;
-}
-
-.weather-card__status {
-    margin: 0;
-    padding-top: 40px;
-    display: flex;
-    flex-direction: column;
-}
-
-.weather-card__grades {
-    margin: 0;
-    display: flex;
-    justify-content: end;
-}
-
-.weather-card__icon {
-    width: 6rem;
-    display: flex;
-    flex-direction: column-reverse;
-    margin-block-end: 1rem;
-    align-items: flex-start;
-}
-
-.weather-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-}
-
-@media (min-width: 300px) and (max-width: 599px){
-    .weather-section {
-        grid-template-columns: repeat(1,1fr);
-        gap: 10px;
-    }
-}
-
-@media (min-width: 600px) and (max-width: 768px){
-    .weather-section {
-        grid-template-columns: repeat(1,1fr);
-        gap: 10px;
-    }
-}
-
-@media (min-width:769px) and (max-width:1024px){
-    .weather-section {
-        grid-template-columns: repeat(2,1fr);
-    }
-}
-
-@media (min-width:1025px) and (max-width:1200px){
-    .weather-section {
-        grid-template-columns: repeat(3,1fr);
-    }
-}
-
-/*
-weather card end
-*/
-
-/*
-footer start
-*/
-
-.footer-endPage {
-
-    grid-area: footer;
-    width: 100%;
-    background-color: black;
-    opacity: .8;
-    color: aliceblue;
-    
-}
-
-.footer-endPage__contenedor {
-    align-items: center ;
-}
-.footer-endPage__parrafo {
-
-    text-align: center;
-}
-
-/*
-footer end
-*/
