--- a/react-refactor/src/index.css
+++ b/react-refactor/src/index.css
@@ -7,7 +7,31 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  display: grid;
+  grid-template-areas:
+      "aside main main"
+      "aside main main"
+      "footer footer footer";
+  grid-template-columns: 16.875rem 1fr 1fr;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+@media (min-width: 200px) and (max-width: 599px) {
+  body {
+      grid-template-areas:
+          "aside"
+          "main "
+          "footer";
+      grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+  }
+}
+*,
+*:before,
+*:after {
+  /*para consultar como se usa correctamente*/
+  box-sizing: inherit;
 }
